footer comment out

--- a/single-project-page-08.html
+++ b/single-project-page-08.html
@@ -330,23 +330,24 @@
             </div>
         </section>
         <!-- end blog navigation bar section -->
+
         <!-- start footer --> 
-        <footer class="footer-classic-dark bg-extra-dark-gray padding-five-bottom sm-padding-30px-bottom">
+        <!-- <footer class="footer-classic-dark bg-extra-dark-gray padding-five-bottom sm-padding-30px-bottom">
             <div class="bg-dark-footer padding-50px-tb sm-padding-30px-tb">
                 <div class="container">
-                    <div class="row align-items-center">
+                    <div class="row align-items-center"> -->
                         <!-- start slogan -->
-                        <div class="col-lg-4 col-md-5 text-center alt-font sm-margin-15px-bottom">
+                        <!-- <div class="col-lg-4 col-md-5 text-center alt-font sm-margin-15px-bottom">
                             London based highly creative studio
-                        </div>
+                        </div> -->
                         <!-- end slogan -->
                         <!-- start logo -->
-                        <div class="col-lg-4 col-md-2 text-center sm-margin-10px-bottom">
+                        <!-- <div class="col-lg-4 col-md-2 text-center sm-margin-10px-bottom">
                             <a href="index.html"><img class="footer-logo" src="images/logo-white.png" data-at2x="images/logo-white@2x.png" alt="Pofo"></a>
-                        </div>
+                        </div> -->
                         <!-- end logo -->
                         <!-- start social media -->
-                        <div class="col-lg-4 col-md-5 text-center">
+                        <!-- <div class="col-lg-4 col-md-5 text-center">
                             <span class="alt-font margin-20px-right md-margin-15px-right">On social networks</span>
                             <div class="social-icon-style-8 d-inline-block align-middle">
                                 <ul class="small-icon mb-0">
@@ -356,22 +357,22 @@
                                     <li><a class="instagram text-white-2" href="https://instagram.com/" target="_blank"><i class="fab fa-instagram no-margin-right" aria-hidden="true"></i></a></li>
                                 </ul>
                             </div>
-                        </div>
+                        </div> -->
                         <!-- end social media -->
-                    </div>
+                    <!-- </div>
                 </div>
             </div>
             <div class="footer-widget-area padding-five-top padding-30px-bottom sm-padding-30px-top">
                 <div class="container">
-                    <div class="row">
+                    <div class="row"> -->
                         <!-- start about -->
-                        <div class="col-lg-3 col-sm-6 widget md-margin-30px-bottom text-center text-sm-start last-paragraph-no-margin">
+                        <!-- <div class="col-lg-3 col-sm-6 widget md-margin-30px-bottom text-center text-sm-start last-paragraph-no-margin">
                             <div class="widget-title alt-font text-small text-medium-gray text-uppercase margin-15px-bottom font-weight-600">About Agency</div>
                             <p class="text-small w-95 sm-w-100">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.  Lorem Ipsum is simply dummy text of the and typesetting industry. </p>
-                        </div>
+                        </div> -->
                         <!-- end about -->
                         <!-- start blog post -->
-                        <div class="col-lg-3 col-sm-6 widget md-margin-30px-bottom">
+                        <!-- <div class="col-lg-3 col-sm-6 widget md-margin-30px-bottom">
                             <div class="widget-title alt-font text-small text-medium-gray text-uppercase margin-15px-bottom font-weight-600 text-center text-sm-start">Latest Blog Post</div>
                             <ul class="latest-post position-relative">
                                 <li class="media d-flex border-bottom border-color-medium-dark-gray">
@@ -393,10 +394,10 @@
                                     <div class="media-body flex-grow-1 text-small"><a href="blog-post-layout-03.html" class="d-block mb-1">I love making the stuff, that's...</a> <span class="clearfix"></span>20 April 2017 | by <a href="blog-grid.html">Herman Miller</a></div>
                                 </li>
                             </ul>
-                        </div>
+                        </div> -->
                         <!-- end blog post -->
                         <!-- start newsletter -->
-                        <div class="col-lg-3 col-sm-6 widget xs-margin-30px-bottom text-center text-sm-start">
+                        <!-- <div class="col-lg-3 col-sm-6 widget xs-margin-30px-bottom text-center text-sm-start">
                             <div class="widget-title alt-font text-small text-medium-gray text-uppercase margin-15px-bottom font-weight-600">Subscribe Newsletter</div>
                             <p class="text-small w-90 sm-w-100">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                             <form action="email-templates/subscribe-newsletter.php" method="post">
@@ -409,11 +410,11 @@
                                         <button id="button-subscribe-newsletter" type="submit" class="btn btn-arrow-small position-absolute border-color-medium-dark-gray submit"><i class="fas fa-caret-right no-margin-left"></i></button>
                                     </div>   
                                 </div>
-                            </form>
-                        </div>
+                            </form> -->
+                        <!-- </div> -->
                         <!-- end newsletter -->
                         <!-- start instagram -->
-                        <div class="col-lg-3 col-sm-6 widget text-center text-sm-start">
+                        <!-- <div class="col-lg-3 col-sm-6 widget text-center text-sm-start">
                             <div class="widget-title alt-font text-small text-medium-gray text-uppercase margin-15px-bottom font-weight-600">Follow us Instagram</div>
                             <div class="w-100 d-inline-block">
                                 <ul class="instafeed-grid instafeed-wrapper grid grid-3col xl-grid-3col lg-grid-3col md-grid-3col sm-grid-3col xs-grid-3col gutter-small" data-total="6">
@@ -427,23 +428,24 @@
                                     </li>
                                 </ul>
                             </div>
-                        </div>
+                        </div> -->
                         <!-- end instagram -->
-                    </div>
+                    <!-- </div>
                 </div>
             </div>
             <div class="container">
                 <div class="footer-bottom border-top border-color-medium-dark-gray padding-30px-top">
-                    <div class="row">
+                    <div class="row"> -->
                         <!-- start copyright -->
-                        <div class="col-lg-6 col-md-6 text-small text-md-start text-center">POFO - Portfolio Concept Theme</div>
-                        <div class="col-lg-6 col-md-6 text-small text-md-end text-center">&COPY; 2021 POFO is Proudly Powered by <a href="http://www.themezaa.com" target="_blank" title="ThemeZaa">ThemeZaa</a></div>
+                        <!-- <div class="col-lg-6 col-md-6 text-small text-md-start text-center">POFO - Portfolio Concept Theme</div>
+                        <div class="col-lg-6 col-md-6 text-small text-md-end text-center">&COPY; 2021 POFO is Proudly Powered by <a href="http://www.themezaa.com" target="_blank" title="ThemeZaa">ThemeZaa</a></div> -->
                         <!-- end copyright -->
-                    </div>
+                    <!-- </div>
                 </div>
             </div>
-        </footer>
+        </footer> -->
         <!-- end footer -->
+        
         <!-- start scroll to top -->
         <a class="scroll-top-arrow" href="javascript:void(0);"><i class="ti-arrow-up"></i></a>
         <!-- end scroll to top  -->
