footeri logo v2iksemaks tegemine

--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
                 <!-- start logo -->
                 <div
                     class="col-lg-3 widget text-start text-sm-center text-lg-start md-margin-50px-bottom sm-margin-30px-bottom">
-                    <a class="logo" href="index.html"><img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641296826/Koduleht/1x/logop1.png" data-at2x="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641296825/Koduleht/2x/logo2x.png" class="default" alt="Oliver Juss"></a>
+                    <a class="logo" href="index.html"><img src="https://res.cloudinary.com/dxxjplpwo/image/upload/c_scale,w_136/v1641296826/Koduleht/1x/logop1.png" data-at2x="https://res.cloudinary.com/dxxjplpwo/image/upload/c_scale,w_320/v1641296825/Koduleht/2x/logo2x.png" class="default" alt="Oliver Juss"></a>
                     <!-- <a href="http://www.themezaa.com" class="d-inline-block"><img class="footer-logo"
                             src="images/logo.png" data-at2x="images/logo@2x.png" alt=""></a> -->
                 </div>
