--- a/single-project-page-08.html
+++ b/single-project-page-08.html
@@ -304,6 +304,8 @@
         <!-- start blog navigation bar section -->
         <section class="wow animate__fadeIn border-top border-color-medium-gray p-0">
             <div class="container-fluid p-0">
+                
+                <!-- next and previous projcet stat -->
                 <div class="row justify-content-between align-items-center g-0 padding-30px-lr md-padding-15px-lr">
                     <div class="w-45 text-start">
                         <div class="blog-nav-link blog-nav-link-prev text-extra-dark-gray">
