hamubrgeri menu muutmione

--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
                                             <div class="col-lg-8 col-md-7 d-flex align-items-center">
                                                 <ul class="hamburger-menu-links alt-font">
                                                     <li><a href="home-classic-corporate.html" title="Home">Home</a></li>
-                                                    <li><a href="about-me.html" title="Pages">Pages</a></li>
+                                                    <!-- <li><a href="about-me.html" title="Pages">Pages</a></li>
                                                     <li><a href="portfolio-full-width-grid-overlay.html" title="Portfolio">Portfolio</a></li>
                                                     <li><a href="blog-standard-full-width.html" title="Blog">Blog</a></li>
                                                     <li><a href="accordions.html" title="Contact">Elements</a></li>
-                                                    <li><a href="transparent-header.html" title="Shortcode">Features</a></li>
+                                                    <li><a href="transparent-header.html" title="Shortcode">Features</a></li> -->
                                                 </ul>
                                             </div>
                                             <div class="col-lg-4 col-md-5 d-flex align-items-center social-style-3">
