--- a/index.html
+++ b/index.html
@@ -30,67 +30,19 @@
             <nav class="navbar navbar-default bootsnav bg-transparent navbar-top nav-box-width navbar-transparent-no-sticky">
                 <div class="container-fluid nav-header-container h-100px sm-h-70px">
                     <!-- start header navigation -->
-                    <div class="col d-none d-md-block text-start ps-0">
+                    <!-- <div class="col d-none d-md-block text-start ps-0">
                         <div class="header-social-icon border-none no-padding-left no-margin-left">
                             <a href="https://www.facebook.com/" title="Facebook" target="_blank"><i class="fab fa-facebook-f"></i></a>
                             <a href="https://twitter.com/" title="Twitter" target="_blank"><i class="fab fa-twitter"></i></a>
                             <a href="https://dribbble.com/" title="Dribbble" target="_blank"><i class="fab fa-dribbble"></i></a>                          
                         </div>
-                    </div>
+                    </div> -->
                     <!-- start logo -->
-                    <div class="col text-md-center pl-0 pl-md-3">
-                        <a class="logo" href="index.html"><img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641296826/Koduleht/1x/logop1.png" data-at2x="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641296825/Koduleht/2x/logo2x.png" class="default" alt="Pofo"></a>
+                    <div class="col text-md-left pl-0 pl-md-3">
+                        <a class="logo" href="index.html"><img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641296826/Koduleht/1x/logop1.png" data-at2x="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641296825/Koduleht/2x/logo2x.png" class="default" alt="Oliver Juss"></a>
                     </div>
                     <!-- end logo -->
-                    <div class="col text-end pe-0">
-                        <div class="hamburger-menu">
-                            <div class="btn btn-hamburger border-none">
-                                <button class="navbar-toggler mobile-toggle" type="button" id="open-button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse">
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
-                                </button>
-                            </div>
-                            <div class="hamburger-menu-wrepper">
-                                <div class="hamburger-logo text-start"><a class="logo" href="index.html"><img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641310432/Koduleht/valgelogo.png" data-at2x="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641310447/Koduleht/valgelogo_2x.png" alt="Pofo"></a></div>
-                                <div class="btn btn-hamburger border-none">
-                                    <button class="close-menu close-button-menu" id="close-button"></button>
-                                </div>
-                                <div class="animation-box">
-                                    <div class="menu-middle">
-                                        <div class="menu-wrapper d-md-flex flex-md-row justify-content-center text-start h-100">
-                                            <div class="col-lg-8 col-md-7 d-flex align-items-center">
-                                                <ul class="hamburger-menu-links alt-font">
-                                                    <li><a href="home-classic-corporate.html" title="Home">Home</a></li>
-                                                    <!-- <li><a href="about-me.html" title="Pages">Pages</a></li>
-                                                    <li><a href="portfolio-full-width-grid-overlay.html" title="Portfolio">Portfolio</a></li>
-                                                    <li><a href="blog-standard-full-width.html" title="Blog">Blog</a></li>
-                                                    <li><a href="accordions.html" title="Contact">Elements</a></li>
-                                                    <li><a href="transparent-header.html" title="Shortcode">Features</a></li> -->
-                                                </ul>
-                                            </div>
-                                            <div class="col-lg-4 col-md-5 d-flex align-items-center social-style-3">
-                                                <div class="w-100">
-                                                    <span class="text-extra-large text-deep-pink alt-font d-block margin-15px-bottom">London Based Creative Studio</span>
-                                                    <span class="text-medium alt-font d-block font-weight-300 margin-15px-bottom line-height-30">301 The Greenhouse,<br>Custard Factory, London, E2 8DY.<br/>Call - +44 (0) 123 456 7890<br/>Email - <a href="mailto:info@domain.com" class="text-white-2" target="_blank">info@domain.com</a></span>
-                                                    <div class="separator-line-horrizontal-medium-light2 bg-deep-pink margin-25px-tb sm-margin-15px-tb d-inline-block"></div>
-                                                    <div class="social-icon-style-9">
-                                                        <ul class="small-icon">
-                                                            <li><a class="margin-20px-right facebook" href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-                                                            <li><a class="margin-20px-right twitter" href="http://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
-                                                            <li><a class="margin-20px-right google" href="http://google.com" target="_blank"><i class="fab fa-google-plus-g"></i></a></li>
-                                                            <li><a class="margin-20px-right dribbble" href="http://dribbble.com" target="_blank"><i class="fab fa-dribbble"></i></a></li>
-                                                            <li><a class="inkedin" href="http://linkedin.com" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
-                                                        </ul>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                   
                 </div>
                 <!-- End Header Navigation -->
             </nav>
