portfoolio asja vahetamine

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                                             <div class="portfolio-hover-main">
                                                 <div class="portfolio-hover-box align-middle"> 
                                                     <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
-                                                    <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Tailoring Interior</span>
+                                                    <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Ametikooli 100</span>
                                                     <p class="no-letter-spacing text-small mb-0 text-medium-gray">Branding and Brochure</p>
                                                 </div>
                                             </div> 
@@ -145,7 +145,7 @@
                             <li class="grid-item grid-item-double branding web wow animate__fadeInUp">
                                 <a href="single-project-page-04.html">
                                     <figure>
-                                        <div class="portfolio-img"><img src="https://via.placeholder.com/900x445" alt=""/></div>
+                                        <div class="portfolio-img"><img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641489256/Koduleht/eesti_ekspress_900x445_w4savs.jpg" alt=""/></div>
                                         <figcaption>
                                             <div class="portfolio-hover-main">
                                                 <div class="portfolio-hover-box align-middle"> 
