portfooliose toode lisamine

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                             <li class="grid-item grid-item-double design wow animate__fadeInUp" data-wow-delay="0.4s">
                                 <a href="single-project-page-03.html">
                                     <figure>
-                                        <div class="portfolio-img"><img src="https://via.placeholder.com/900x900" alt=""/></div>
+                                        <div class="portfolio-img"><img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641563173/Koduleht/olivercvi_900x900_qox8xg.jpg" alt=""/></div>
                                         <figcaption>
                                             <div class="portfolio-hover-main">
                                                 <div class="portfolio-hover-box align-middle"> 
@@ -181,7 +181,7 @@
                             <li class="grid-item grid-item-double web photography wow animate__fadeInUp" data-wow-delay="0.4s">
                                 <a href="single-project-page-06.html">
                                     <figure>
-                                        <div class="portfolio-img"><img src="https://via.placeholder.com/900x900" alt=""/></div>
+                                        <div class="portfolio-img"><img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641560003/Koduleht/vangoghi_mockup3_900x445_apha1i.jpg" alt=""/></div>
                                         <figcaption>
                                             <div class="portfolio-hover-main">
                                                 <div class="portfolio-hover-box align-middle"> 
@@ -252,7 +252,7 @@
                             <li class="grid-item grid-item-double web photography wow animate__fadeInUp">
                                 <a href="single-project-page-02.html">
                                     <figure>
-                                        <div class="portfolio-img"><img src="https://via.placeholder.com/900x445" alt=""/></div>
+                                        <div class="portfolio-img"><img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641552779/Koduleht/sport_banner_mockup_900x445_ek5yqe.jpg" alt=""/></div>
                                         <figcaption>
                                             <div class="portfolio-hover-main">
                                                 <div class="portfolio-hover-box align-middle"> 
