Projektide lehe tegemine

--- a/single-project-page-03.html
+++ b/single-project-page-03.html
@@ -1,142 +1,76 @@
 <!doctype html>
 <html class="no-js" lang="en">
-    <head>
-        <!-- title -->
-        <title>POFO – Creative Agency, Corporate and Portfolio Multi-purpose Template</title>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1" />
-        <meta name="author" content="ThemeZaa">
-        <!-- description -->
-        <meta name="description" content="POFO is a highly creative, modern, visually stunning and Bootstrap responsive multipurpose agency and portfolio HTML5 template with 25 ready home page demos.">
-        <!-- keywords -->
-        <meta name="keywords" content="creative, modern, clean, bootstrap responsive, html5, css3, portfolio, blog, agency, templates, multipurpose, one page, corporate, start-up, studio, branding, designer, freelancer, carousel, parallax, photography, personal, masonry, grid, coming soon, faq">
-        <!-- favicon -->
-        <link rel="shortcut icon" href="images/favicon.png">
-        <link rel="apple-touch-icon" href="images/apple-touch-icon-57x57.png">
-        <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
-        <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
-        <!-- style sheets and font icons  -->
-        <link rel="stylesheet" type="text/css" href="css/bootsnav.css">
-        <link rel="stylesheet" type="text/css" href="css/font-icons.min.css">
-        <link rel="stylesheet" type="text/css" href="css/theme-vendors.min.css">
-        <link rel="stylesheet" type="text/css" href="css/style.css" />
-        <link rel="stylesheet" type="text/css" href="css/responsive.css" />
-    </head>
-    <body>
 
+<head>
+    <!-- title -->
+    <title>Oliver Juss – Portfoolio</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1" />
+    <meta name="author" content="ThemeZaa">
+    <!-- description -->
+    <meta name="description"
+        content="POFO is a highly creative, modern, visually stunning and Bootstrap responsive multipurpose agency and portfolio HTML5 template with 25 ready home page demos.">
+    <!-- keywords -->
+    <meta name="keywords"
+        content="creative, modern, clean, bootstrap responsive, html5, css3, portfolio, blog, agency, templates, multipurpose, one page, corporate, start-up, studio, branding, designer, freelancer, carousel, parallax, photography, personal, masonry, grid, coming soon, faq">
+    <!-- favicon -->
+    <link rel="shortcut icon"
+        href="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641310432/Koduleht/valgelogo.png">
+    <link rel="apple-touch-icon" href="images/apple-touch-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
+    <!-- style sheets and font icons  -->
+    <link rel="stylesheet" type="text/css" href="css/bootsnav.css">
+    <link rel="stylesheet" type="text/css" href="css/font-icons.min.css">
+    <link rel="stylesheet" type="text/css" href="css/theme-vendors.min.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet" type="text/css" href="css/responsive.css" />
+</head>
+
+<body class="w-100">
 <!-- start header -->
 <header>
     <!-- start navigation -->
     <nav class="navbar navbar-default bootsnav bg-transparent navbar-top nav-box-width navbar-transparent-no-sticky">
         <div class="container-fluid nav-header-container h-100px sm-h-70px">
             <!-- start header navigation -->
-            <div class="col d-none d-md-block text-start ps-0">
-                <div class="header-social-icon border-none no-padding-left no-margin-left">
-                    <a href="https://www.facebook.com/" title="Facebook" target="_blank"><i
-                            class="fab fa-facebook-f"></i></a>
-                    <a href="https://twitter.com/" title="Twitter" target="_blank"><i class="fab fa-twitter"></i></a>
-                    <a href="https://dribbble.com/" title="Dribbble" target="_blank"><i class="fab fa-dribbble"></i></a>
-                </div>
-            </div>
+            <!-- <div class="col d-none d-md-block text-start ps-0">
+                        <div class="header-social-icon border-none no-padding-left no-margin-left">
+                            <a href="https://www.facebook.com/" title="Facebook" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                            <a href="https://twitter.com/" title="Twitter" target="_blank"><i class="fab fa-twitter"></i></a>
+                            <a href="https://dribbble.com/" title="Dribbble" target="_blank"><i class="fab fa-dribbble"></i></a>                          
+                        </div>
+                    </div> -->
             <!-- start logo -->
-            <div class="col text-md-center pl-0 pl-md-3">
+            <div class="col text-md-left pl-0 pl-md-3">
                 <a class="logo" href="index.html"><img
                         src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641296826/Koduleht/1x/logop1.png"
                         data-at2x="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641296825/Koduleht/2x/logo2x.png"
-                        class="default" alt="Pofo"></a>
+                        class="default" alt="Oliver Juss"></a>
             </div>
             <!-- end logo -->
-            <div class="col text-end pe-0">
-                <div class="hamburger-menu">
-                    <div class="btn btn-hamburger border-none">
-                        <button class="navbar-toggler mobile-toggle" type="button" id="open-button"
-                            data-bs-toggle="collapse" data-bs-target=".navbar-collapse">
-                            <span></span>
-                            <span></span>
-                            <span></span>
-                        </button>
-                    </div>
-                    <div class="hamburger-menu-wrepper">
-                        <div class="hamburger-logo text-start"><a class="logo" href="index.html"><img
-                                    src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641310432/Koduleht/valgelogo.png"
-                                    data-at2x="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641310447/Koduleht/valgelogo_2x.png"
-                                    alt="Pofo"></a></div>
-                        <div class="btn btn-hamburger border-none">
-                            <button class="close-menu close-button-menu" id="close-button"></button>
-                        </div>
-                        <div class="animation-box">
-                            <div class="menu-middle">
-                                <div class="menu-wrapper d-md-flex flex-md-row justify-content-center text-start h-100">
-                                    <div class="col-lg-8 col-md-7 d-flex align-items-center">
-                                        <ul class="hamburger-menu-links alt-font">
-                                            <li><a href="home-classic-corporate.html" title="Home">Home</a></li>
-                                            <li><a href="about-me.html" title="Pages">Pages</a></li>
-                                            <li><a href="portfolio-full-width-grid-overlay.html"
-                                                    title="Portfolio">Portfolio</a></li>
-                                            <li><a href="blog-standard-full-width.html" title="Blog">Blog</a></li>
-                                            <li><a href="accordions.html" title="Contact">Elements</a></li>
-                                            <li><a href="transparent-header.html" title="Shortcode">Features</a></li>
-                                        </ul>
-                                    </div>
-                                    <div class="col-lg-4 col-md-5 d-flex align-items-center social-style-3">
-                                        <div class="w-100">
-                                            <span
-                                                class="text-extra-large text-deep-pink alt-font d-block margin-15px-bottom">London
-                                                Based Creative Studio</span>
-                                            <span
-                                                class="text-medium alt-font d-block font-weight-300 margin-15px-bottom line-height-30">301
-                                                The Greenhouse,<br>Custard Factory, London, E2 8DY.<br />Call - +44 (0)
-                                                123 456 7890<br />Email - <a href="mailto:info@domain.com"
-                                                    class="text-white-2" target="_blank">info@domain.com</a></span>
-                                            <div
-                                                class="separator-line-horrizontal-medium-light2 bg-deep-pink margin-25px-tb sm-margin-15px-tb d-inline-block">
-                                            </div>
-                                            <div class="social-icon-style-9">
-                                                <ul class="small-icon">
-                                                    <li><a class="margin-20px-right facebook"
-                                                            href="https://www.facebook.com/" target="_blank"><i
-                                                                class="fab fa-facebook-f"></i></a></li>
-                                                    <li><a class="margin-20px-right twitter" href="http://twitter.com"
-                                                            target="_blank"><i class="fab fa-twitter"></i></a></li>
-                                                    <li><a class="margin-20px-right google" href="http://google.com"
-                                                            target="_blank"><i class="fab fa-google-plus-g"></i></a>
-                                                    </li>
-                                                    <li><a class="margin-20px-right dribbble" href="http://dribbble.com"
-                                                            target="_blank"><i class="fab fa-dribbble"></i></a></li>
-                                                    <li><a class="inkedin" href="http://linkedin.com" target="_blank"><i
-                                                                class="fab fa-linkedin-in"></i></a></li>
-                                                </ul>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+
         </div>
         <!-- End Header Navigation -->
     </nav>
     <!-- end navigation -->
 </header>
 <!-- end header -->
-
          <!-- start information section -->
         <section class="wow animate__fadeIn bg-light-gray big-section">
             <div class="container padding-two-tb">
                 <div class="row">
                     <div class="col-12 text-center margin-60px-bottom md-margin-30px-bottom sm-margin-10px-bottom">
                         <span class="w-60 mx-auto text-outside-line alt-font sm-w-100 sm-padding-15px-lr d-inline">Branding &nbsp;&nbsp; • &nbsp;&nbsp; Design &nbsp;&nbsp; • &nbsp;&nbsp; Web</span>
-                        <h1 class="text-extra-dark-gray alt-font letter-spacing-minus-1 font-weight-700 d-block margin-10px-top">Spice Blends</h1>
+                        <h1 class="text-extra-dark-gray alt-font letter-spacing-minus-1 font-weight-700 d-block margin-10px-top">Minu Logo</h1>
                     </div>
                     <div class="col-12 col-lg-5 offset-lg-1 line-height-28 last-paragraph-no-margin md-margin-50px-bottom sm-margin-30px-bottom wow animate__fadeInUp">
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages.</p>
                     </div>
                     <div class="col-12 col-lg-4 offset-lg-1 line-height-26 wow animate__fadeInUp">
                         <ul class="list-style-6 margin-twelve-left">
-                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Client:</label>Jason Richardson</li>
+                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Client:</label>Oliver Juss</li>
                             <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Industry:</label>Adventure  /  Travel</li>
                             <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Services:</label>Design, Art Direction, Website</li>
                             <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Date:</label>January 16th, 2017</li>
@@ -152,23 +86,15 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                        <img src="https://via.placeholder.com/1200x752" class="w-100" alt=""/>
+                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641653722/Koduleht/logovaratid_mzos4z.jpg" class="w-100" alt=""/>
                     </div>
                     <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                        <img src="https://via.placeholder.com/1200x752" class="w-100" alt=""/>
+                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641653467/Koduleht/tempel_m8zk4g.jpg" class="w-100" alt=""/>
                     </div>
                     <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                        <img src="https://via.placeholder.com/1200x752" class="w-100" alt=""/>
+                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641653475/Koduleht/juss_kontor_riobi5.jpg" class="w-100" alt=""/>
                     </div>
-                    <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                        <img src="https://via.placeholder.com/1200x752" class="w-100" alt=""/>
-                    </div>
-                    <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                        <img src="https://via.placeholder.com/1200x752" class="w-100" alt=""/>
-                    </div>
-                    <div class="col-12 wow animate__fadeInUp">
-                        <img src="https://via.placeholder.com/1200x752" class="w-100" alt=""/>
-                    </div>
+                   
                 </div>
             </div>
         </section>
@@ -310,9 +236,9 @@
                     <div class="w-45 text-start">
                         <div class="blog-nav-link blog-nav-link-prev text-extra-dark-gray">
                             <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Previous Project</span>
-                            <a href="single-project-page-07.html">
+                            <a href="single-project-page-02.html">
                                 <i class="ti-arrow-left blog-nav-icon"></i>
-                                Restaurant Photography
+                                Juhtimiskonverents
                             </a>
                         </div>
                     </div>
@@ -322,9 +248,9 @@
                     <div class="w-45 text-end">
                         <div class="blog-nav-link blog-nav-link-next text-extra-dark-gray">    
                             <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Next Project</span>
-                            <a href="single-project-page-01.html">
+                            <a href="single-project-page-04.html">
                                 <i class="ti-arrow-right blog-nav-icon"></i>
-                                Mammut Adventure
+                                Van Goghi raamat
                             </a>
                         </div>
                     </div>
